fixed an issue in mobile safari where studio mobile header would reorganize its z-index stack when the page scrolled, by added a z-index to the parent element

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -241,7 +241,7 @@ textarea {
   padding-top: env(safe-area-inset-top) !important;
 }
 
-.pwa-bottom-padding {
+.pwa-padding-bottom {
   padding-bottom: env(safe-area-inset-bottom) !important;
 }
 
